fix cta wrap styles

--- a/blocks/cta/cta.scss
+++ b/blocks/cta/cta.scss
@@ -10,6 +10,7 @@
         margin-left:calc(50% - 50vw) !important;
     }
     .wrap {
+        width:100%;
         max-width:1200px;
         margin-inline: auto;
         z-index:1;
